--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       </style>
   </head>
-  <body style="background-image: url(file:///C:/Users/USER/Downloads/Panorama_0_JE1.png);color: gray;">
+  <body style="background-color: blue;color: gray;">
     <div class="menu">
     <p>███╗░░░███╗██╗███╗░░██╗███████╗░█████╗░██████╗░░█████╗░███████╗████████╗
        ████╗░████║██║████╗░██║██╔════╝██╔══██╗██╔══██╗██╔══██╗██╔════╝╚══██╔══╝
