--- a/bugs.html
+++ b/bugs.html
@@ -11,6 +11,6 @@
   <p>version 0.1: fixed steve look</p>
   
   <p>version 0.2: fixed cobble not rendering</p>
-  <button onclick="window.location.href='browsercraft.htm'">Done</button>
+  <button onclick="window.location.href='index.html'">Done</button>
 </body>
 </html>
